--- a/gymHouse/entrenamiento/templates/admin_entrenar-historial.html
+++ b/gymHouse/entrenamiento/templates/admin_entrenar-historial.html
@@ -115,12 +115,9 @@
                         <p>Rutina</p>
                     </div>
                     <p>Selecciona la fecha deseada:</p>
-                    <input type="date" name="fecha" min="2022-10-01" max="2025-12-31" id="date" />
-                    <input type="submit">
+                    <input class="fecha" type="date" name="fecha" min="2022-10-01" max="2025-12-31" id="date" />
+                    <input class="botonito" type="submit">
                 </form>
-                <button>
-                    <img src="assets/images/download.svg">
-                </button>
                 <div class="rutinas">
                     <div class="mujeres">
                         <h1>Mujeres</h1>
