--- a/gymHouse/entrenamiento/templates/admin_entrenar.html
+++ b/gymHouse/entrenamiento/templates/admin_entrenar.html
@@ -114,7 +114,7 @@
                 <div class="seccion" id="abdominales">
                     <div class="title_desplegable">
                         <h2>Abdomen</h2>
-                        <img src="assets/images/angle-small-left.png">
+                        <img src="{% static 'images/angle-small-left.png' %}">
                     </div>
 
                     <div class="plegable">
@@ -138,7 +138,7 @@
                 <div class="seccion" id="brazos">
                     <div class="title_desplegable">
                         <h2>Brazos</h2>
-                        <img src="assets/images/angle-small-left.png">
+                        <img src="{% static 'images/angle-small-left.png' %}">
                      
                     </div>
                     
@@ -163,7 +163,7 @@
                 <div class="seccion" id="espalda">
                     <div class="title_desplegable">
                         <h2>Espalda</h2>
-                        <img src="assets/images/angle-small-left.png">
+                        <img src="{% static 'images/angle-small-left.png' %}">
                     </div>
 
                     <div class="plegable">
@@ -188,7 +188,7 @@
                 <div class="seccion" id="piernas">
                     <div class="title_desplegable">
                         <h2>Piernas</h2>
-                        <img src="assets/images/angle-small-left.png">
+                        <img src="{% static 'images/angle-small-left.png' %}">
                     </div>
 
                     <div class="plegable">
@@ -212,7 +212,7 @@
                 <div class="seccion" id="gluteos">
                     <div class="title_desplegable">
                         <h2>Glúteos</h2>
-                        <img src="assets/images/angle-small-left.png">
+                        <img src="{% static 'images/angle-small-left.png' %}">
                     </div>
 
                     <div class="plegable">
@@ -236,7 +236,7 @@
                 <div class="seccion" id="elongacion">
                     <div class="title_desplegable">
                         <h2>Elongación</h2>
-                        <img src="assets/images/angle-small-left.png">
+                        <img src="{% static 'images/angle-small-left.png' %}">
                     </div>
 
                     <div class="plegable">
@@ -280,7 +280,7 @@
                         {% csrf_token %}
                         
                         <input type="submit" value="Guardar" name="button_submit">
-                        <select name="genero" id="id_genero">
+                        <select class="selecciongenero" name="genero" id="id_genero">
                             <option value="hombre" selected>Hombre</option>
                             <option value="mujer">Mujer</option>
                         </select>
