--- a/gymHouse/static/css/styles_admin_entrenar-historial.css
+++ b/gymHouse/static/css/styles_admin_entrenar-historial.css
@@ -44,6 +44,7 @@ body {
 .historial{
     height: 90%;
     width: 90%;
+    max-width: 110rem;
     background: #b8b4ff;
     border-radius: 32px;
 
@@ -84,11 +85,31 @@ body {
     text-align: center;
     margin: auto;   
 }
-.pickdate input{
-    width: 99%;
+.pickdate > .fecha{
+    border-radius: 18px;
+    border: none;
+    padding: 1rem 2rem;
     margin: 1rem auto 2rem;
+    font-family: 'raleway bold';
+    font-size: 1.2rem;
+    cursor: pointer;
 }
-
+.pickdate > .botonito{
+    margin: 1rem auto 2rem;
+    border-radius: 14px;
+    border: none;
+    background-color: #5135FF;
+    box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+    /* display: flex; */
+    /* justify-content: center; */
+    /* margin: 1rem auto; */
+    padding: 1rem 3rem;
+    cursor: pointer;
+    transition: all .5s ease;
+    font-family: "raleway semibold";
+    color: white;
+    font-size: 1.6rem;
+}
 /* ---- Descargar rutina --------------- */
 
 .historial button{
