--- a/gymHouse/static/css/styles_alumnos-landing.css
+++ b/gymHouse/static/css/styles_alumnos-landing.css
@@ -68,7 +68,7 @@ body {
     width: 100%;
     text-align: center;
     font-size: 2.4rem;
-    margin-top: 2.6%;
+    margin: 2rem;
     font-family: "Raleway semibold";
 }
 .landing-noticias-news{
