--- a/gymHouse/static/css/styles_alumnos-turnos.css
+++ b/gymHouse/static/css/styles_alumnos-turnos.css
@@ -66,12 +66,15 @@ body{
     width: 100vw;
     display: flex;
     padding: 2rem 1rem 1rem 9rem;
+    overflow-y: hidden;
 }
 .shifts{
     width: 70%;
 }
 .acomodar{
     width: 30%;
+    overflow: hidden;
+    position: relative;
 }
 .shifts_info > .alumnos{
     display: none;
@@ -110,6 +113,23 @@ body{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+}
+.landing-planmensual a {
+    width: 15rem;
+    height: 4rem;
+    border-radius: 18px;
+    border-color: transparent;
+    background-color: #5135FF;
+    font-family: "raleway semibold";
+    color: white;
+    text-decoration: none;
+    font-size: 1.4rem;
+    box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    transition: all .5s ease;
 }
 .shifts_days--tuesday{
     grid-column-start: 2;
@@ -223,6 +243,7 @@ body{
     display: flex;
     align-content: center;
     justify-self: center;
+    cursor: pointer;
 }
 
 /*Mensual suscription*/
@@ -335,6 +356,13 @@ body{
     min-height: 16rem;
     transition: all 1s ease;
     justify-self: center;
+    position: absolute;
+    bottom: -110%;
+    transition: .3s all ease;
+}
+.window_turno_alumnos.active
+{
+    bottom:50% ;
 }
 .window_turno_alumnos button{
     font-weight: 800;
@@ -344,6 +372,7 @@ body{
     background-color: #b8b4ff;
     color:#5135FF;
     border-radius: 10px;
+    cursor: pointer;
 }
 .window_turno_alumnos h1{
     font-family: "raleway bold";
